<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <EditTextPreference
        android:key="refresh"
        android:title="@string/refresh"
        android:summary="@string/in_minutes"
        android:inputType="number"
        android:hint="@string/minutes"
        android:defaultValue="60" />
    <CheckBoxPreference
        android:key="https"
        android:title="@string/paranoid"
        android:summary="@string/https"
        android:defaultValue="false" />
    <PreferenceCategory android:title="@string/about">
        <Preference
            android:title="\@Pixel_Dailies"
            android:summary="@string/description"
            android:icon="@mipmap/ic_launcher">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="http://www.twitter.com/pixel_dailies" />
        </Preference>
    </PreferenceCategory>
</PreferenceScreen>